# pycomap

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  CONTRIBUTING.md  Justfile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-docs.yml  release.yml  tag.yml
PROTOCOL/: index.html
api/alarms/: index.html
api/client/: index.html
api/configuration/: index.html
api/controller/: index.html
api/datatypes/: index.html
api/discovery/: index.html
api/exceptions/: index.html
api/history/: index.html
docs/: PROTOCOL.md  controller_reference.md  index.md  protocol.md
docs/api/: alarms.md  client.md  configuration.md  controller.md  datatypes.md  discovery.md  exceptions.md  history.md
docs/css/: extra.css
docs/js/: extra.js
examples/: discover.py  read_values_all.py  status.py  write_setpoint.py
scripts/: gen_ai_docs.py  gen_controller_reference.py
search/: search_index.json
src/pycomap/: __init__.py  alarms.py  configuration.py  controller.py  datatypes.py  discovery.py  exceptions.py  history.py
src/pycomap/protocol/: __init__.py  client.py  commands.py  crc.py  crypto.py  framing.py  objects.py  transport.py
tests/integration/: conftest.py  test_alarms.py  test_commands.py  test_configuration.py  test_controller.py  test_datetime.py  test_discovery.py  test_history.py  test_live_client.py
tests/unit/: builders.py  test_alarms.py  test_configuration.py  test_controller.py  test_datatypes.py  test_discovery.py  test_exceptions.py  test_history.py
tests/unit/protocol/: test_client.py  test_commands.py  test_crc.py  test_crypto.py  test_framing.py  test_transport.py
